# kittest_inspector

./: .gitignore  .mcp.json  .typos.toml  Cargo.toml  README.md  RELEASES.md  clippy.toml  deny.toml  lychee.toml  rust-toolchain
.github/workflows/: preview_comment.yml  rust.yml
crates/egui_mcp/: Cargo.toml  README.md
crates/egui_mcp/src/: bridge.rs  tools.rs  tree.rs
crates/egui_mcp/src/snapshots/: egui_mcp__tools__tests__agent_surface.snap
crates/kittest_inspector/: Cargo.toml
crates/kittest_inspector/src/: app.rs  gif.rs  lib.rs  state.rs
crates/kittest_inspector/src/ui/: central.rs  controls.rs  details.rs  source.rs
crates/kittest_inspector/tests/: snapshot.rs
src/: gif.rs  lib.rs  main.rs
src/ui/: mod.rs
tests/: example_app.rs  failing_example.rs  snapshot.rs
