[package]
name = "kittest_inspector"
version = "0.1.0"
authors = ["Lucas Meurer <hi@lucasmerlin.me>", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Live inspector eframe app for egui_kittest tests (frame + accesskit tree + step controls)"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rerun-io/kittest_inspector"
repository = "https://github.com/rerun-io/kittest_inspector"
categories = ["gui", "development-tools::testing"]
keywords = ["egui", "kittest", "testing", "inspector"]
readme = "README.md"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
publish = true

[[bin]]
name = "kittest_inspector"
path = "src/main.rs"

[dependencies]
# `inspector_api` brings in the wire protocol (Frame, HarnessMessage, ...) plus a
# serde-enabled `egui` re-export. The whole protocol lives in `egui_kittest` so the inspector
# can be released independently — pin the egui version to whichever release you support.
#
# Temporarily pulling from the `lucas/kittest-inspect` branch on `lucasmerlin/egui` — that's
# where `inspector_api` lives until it ships in a released `egui_kittest`. Flip to a plain
# `version = "..."` dep once that lands.
egui_kittest = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["inspector_api"] }

# eframe + egui_extras need to come from the same egui checkout so their `egui` matches the
# one re-exported by `egui_kittest` above (otherwise we get two `egui::Event` types that
# don't unify). Drop the `git = ...` once all four crates ship with `inspector_api`.
eframe = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_extras = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["image"] }
fs4 = { version = "0.13.1", default-features = false, features = ["sync"] }
image = { version = "0.25.6", default-features = false, features = ["gif"] }
# Cross-platform clipboard — same crate eframe uses — with `set_file_list` so apps that
# accept pasted files (Slack, Discord, Finder, etc.) attach the GIF with animation intact.
arboard = { version = "3.6.1", default-features = false }


[dev-dependencies]
# Launch the inspector under egui_kittest for integration tests. `eframe` lets us wrap
# `InspectorApp` directly; `wgpu` + `snapshot` provide the renderer + `Harness::snapshot`.
egui_kittest = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["eframe", "wgpu", "snapshot", "inspector"] }
# Same source as the `[dependencies]` entries — cargo unifies them, and duplicating the
# declaration keeps tests able to name `eframe` / `egui` (and `egui::accesskit` for
# synthesising Frames) directly.
eframe = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = { git = "https://github.com/emilk/egui", branch = "lucas/kittest-inspector-plugin", default-features = false, features = ["serde"] }


[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


# ----------------------------------------------------------------------------------------
# Lints:

[lints]
workspace = true

[workspace]
members = []

[workspace.lints.rust]
unsafe_code = "deny"

elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

trivial_casts = "allow"
unused_qualifications = "allow"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

allow_attributes = "warn"
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_names = "warn"
disallowed_script_idents = "warn"
disallowed_types = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_include_without_cfg = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
empty_enums = "warn"
empty_enum_variants_with_brackets = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
missing_fields_in_debug = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
self_only_used_in_recursion = "warn"
semicolon_if_nothing_returned = "warn"
set_contains_or_insert = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
single_option_map = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
tuple_array_conversions = "warn"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"

# TODO(emilk): maybe enable more of these lints?
cast_possible_wrap = "allow"
comparison_chain = "allow"
should_panic_without_expect = "allow"
too_many_lines = "allow"

# These are meh:
assigning_clones = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
manual_range_contains = "allow"
map_unwrap_or = "allow"
self_named_module_files = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"
