[package]
name = "egui_mcp"
version.workspace = true
authors = ["Lucas Meurer <hi@lucasmerlin.me>"]
description = "MCP server that drives live egui apps over the egui_inspection protocol"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["gui", "development-tools::testing"]
keywords = ["egui", "mcp", "accesskit", "inspector", "testing"]
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[[bin]]
name = "egui-mcp"
path = "src/main.rs"

[dependencies]
egui_inspection = { git = "https://github.com/emilk/egui", branch = "main", default-features = false }
egui = { git = "https://github.com/emilk/egui", branch = "main", default-features = false }
# `enumn` gives `Role::n`, used to validate a role string against the full AccessKit role set.
accesskit = { version = "0.24.0", features = ["enumn"] }
accesskit_consumer = "0.35.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "net",
  "sync",
  "macros",
  "time",
  "signal",
] }
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.48"

[lints]
workspace = true
